Merge of harris into stable