@@ -9,11 +9,11 @@ package org.tdar.struts.action.resource;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 import java.io.File;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -22,22 +22,29 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
+import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.io.IOUtils;
+import org.apache.poi.ss.usermodel.Cell;
 import org.junit.Test;
 import org.springframework.test.annotation.Rollback;
 import org.tdar.TestConstants;
 import org.tdar.core.bean.resource.CodingRule;
 import org.tdar.core.bean.resource.CodingSheet;
 import org.tdar.core.bean.resource.Dataset;
+import org.tdar.core.bean.resource.InformationResourceFile;
+import org.tdar.core.bean.resource.InformationResourceFile.FileStatus;
 import org.tdar.core.bean.resource.InformationResourceFileVersion;
-import org.tdar.core.bean.resource.dataTable.DataTable;
-import org.tdar.core.bean.resource.dataTable.DataTableColumn;
-import org.tdar.core.bean.resource.dataTable.DataTableColumnEncodingType;
-import org.tdar.core.bean.resource.dataTable.DataTableColumnType;
+import org.tdar.core.bean.resource.Ontology;
+import org.tdar.core.bean.resource.datatable.DataTable;
+import org.tdar.core.bean.resource.datatable.DataTableColumn;
+import org.tdar.core.bean.resource.datatable.DataTableColumnEncodingType;
+import org.tdar.core.bean.resource.datatable.DataTableColumnType;
+import org.tdar.core.configuration.TdarConfiguration;
 import org.tdar.struts.action.AbstractDataIntegrationTestCase;
 import org.tdar.struts.action.TdarActionException;
 import org.tdar.struts.action.TdarActionSupport;
 import org.tdar.struts.data.ResultMetadataWrapper;
+import org.tdar.utils.ExcelUnit;
 
 /**
  * @author Adam Brin
@@ -47,12 +54,14 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
 
     private static final String TEST_DATA_SET_FILE_PATH = TestConstants.TEST_DATA_INTEGRATION_DIR + "total-number-of-bones-per-period.xlsx";
 
-    private static final File TEST_DATSET_FILE = new File(TEST_DATA_SET_FILE_PATH);
+    private static final File TEST_DATASET_FILE = new File(TEST_DATA_SET_FILE_PATH);
     private static final String EXCEL_FILE_NAME = "periods-modified-sm-01182011.xlsx";
     private static final String EXCEL_FILE_NAME2 = "periods-modified-sm-01182011-2.xlsx";
     private static final String EXCEL_FILE_PATH = TestConstants.TEST_DATA_INTEGRATION_DIR + EXCEL_FILE_NAME;
     private static final String EXCEL_FILE_PATH2 = TestConstants.TEST_DATA_INTEGRATION_DIR + EXCEL_FILE_NAME2;
     private String codingSheetFileName = "/coding sheet/csvCodingSheetText.csv";
+
+    private InformationResourceFile tranlatedIRFile;
 
     private static final String DOUBLE_CODING = "double_coding_key.csv";
     private static final String DOUBLE_DATASET = "double_translation_test_dataset.xlsx";
@@ -62,6 +71,30 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
     // TEST ME: http://dev.tdar.org/jira/browse/TDAR-581
 
     private static final String PATH = TestConstants.TEST_CODING_SHEET_DIR;
+
+    @Test
+    @Rollback
+    /**
+     * @return
+     * @throws TdarActionException
+     */
+    public void testInvalidCodingSheet() throws TdarActionException {
+        CodingSheetController codingSheetController = generateNewInitializedController(CodingSheetController.class);
+        codingSheetController.prepare();
+        CodingSheet codingSheet = codingSheetController.getCodingSheet();
+        codingSheet.setTitle("test coding sheet");
+        codingSheet.setDescription("test description");
+        codingSheetController.setFileInputMethod("text");
+        codingSheetController.setFileTextInput("a,");
+        codingSheetController.setServletRequest(getServletPostRequest());
+        codingSheetController.save();
+        Long codingId = codingSheet.getId();
+        assertNotNull(codingId);
+        assertTrue(codingSheet.getCodingRules().isEmpty());
+        assertFalse(codingSheetController.getActionErrors().size() == 0);
+        setIgnoreActionErrors(true);
+
+    }
 
     @Test
     @Rollback
@@ -78,6 +111,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         assertNotNull(text);
         assertFalse(text.contains("D, Don't"));
         controller.setFileTextInput(text);
+        controller.setServletRequest(getServletPostRequest());
         controller.save();
         Set<CodingRule> newCodingRules = controller.getCodingSheet().getCodingRules();
         logger.info("text was: " + text);
@@ -89,6 +123,16 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
                 fail("Should not have found a 'D'");
             }
         }
+    }
+
+    @Test
+    @Rollback
+    public void testDegenerateCodingSheetWithTabs() throws IOException {
+        getControllers().clear();
+        CodingSheet codingSheet = setupAndLoadResource("tab_as_csv.csv", CodingSheet.class);
+        assertEquals(FileStatus.PROCESSING_ERROR, codingSheet.getFirstInformationResourceFile().getStatus());
+        setIgnoreActionErrors(true);
+        assertTrue(CollectionUtils.isNotEmpty(getControllers().get(0).getActionErrors()));
     }
 
     @Test
@@ -150,6 +194,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         String codingText = IOUtils.toString(getClass().getResourceAsStream(codingSheetFileName));
         assertNotNull(codingText);
         controller.setFileTextInput(codingText);
+        controller.setServletRequest(getServletPostRequest());
         controller.save();
         Long codingId = codingSheet.getId();
         assertNotNull(codingId);
@@ -179,6 +224,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         assertNotNull(controller.getFileTextInput());
         assertEquals(codingText, controller.getFileTextInput());
 
+        controller.setServletRequest(getServletPostRequest());
         controller.save();
         codingSheet = genericService.find(CodingSheet.class, codingId);
         // FIXME: brittle, use
@@ -191,6 +237,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         controller.loadCustomMetadata();
         controller.setFileInputMethod("text");
         controller.setFileTextInput(codingText + "abd ");
+        controller.setServletRequest(getServletPostRequest());
         controller.save();
         codingSheet = genericService.find(CodingSheet.class, codingId);
         genericService.merge(codingSheet);
@@ -209,22 +256,10 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         String codingText = IOUtils.toString(getClass().getResourceAsStream(codingSheetFileName));
         assertNotNull(codingText);
         controller.setFileTextInput(codingText);
+        codingSheet.setDate(1243);
+        controller.setServletRequest(getServletPostRequest());
         controller.save();
-        Dataset ds = new Dataset();
-        ds.setTitle("test");
-        ds.markUpdated(getUser());
-        genericService.save(ds);
-        DataTable dt = new DataTable();
-        dt.setName("test");
-        dt.setDataset(ds);
-        genericService.save(dt);
-        DataTableColumn dtc = new DataTableColumn();
-        dtc.setName("test");
-        dtc.setDisplayName("test");
-        dtc.setDataTable(dt);
-        dtc.setColumnDataType(DataTableColumnType.VARCHAR);
-        dtc.setDefaultCodingSheet(codingSheet);
-        genericService.save(dtc);
+
         Set<CodingRule> exitingCodingRules = new HashSet<CodingRule>(codingSheet.getCodingRules());
         controller = generateNewInitializedController(CodingSheetController.class);
         controller.setId(codingSheet.getId());
@@ -236,6 +271,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         codingText = IOUtils.toString(getClass().getResourceAsStream(codingSheetFileName));
         assertNotNull(codingText);
         controller.setFileTextInput(codingText);
+        controller.setServletRequest(getServletPostRequest());
         controller.save();
 
         Long codingId = codingSheet.getId();
@@ -279,6 +315,19 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
 
     @Test
     @Rollback
+    public void testXLSCodingSheetUploadDoesNotGoThroughDatasetWorkflow() throws Exception {
+        CodingSheet codingSheet = setupCodingSheet("semidegen.xlsx", TestConstants.TEST_CODING_SHEET_DIR + "semidegen.xlsx", null);
+        for (InformationResourceFile file : codingSheet.getInformationResourceFiles()) {
+            Dataset transientDataset = (Dataset) file.getWorkflowContext().getTransientResource();
+            logger.info("file: {} ", file);
+            logger.info("dataset: {} ", transientDataset);
+            assertTrue(transientDataset == null || CollectionUtils.isEmpty(transientDataset.getDataTables()));
+            assertTrue(CollectionUtils.isEmpty(file.getWorkflowContext().getExceptions()));
+        }
+    }
+
+    @Test
+    @Rollback
     public void testCodingSheetMappingReplace() throws Exception {
         CodingSheet codingSheet = setupCodingSheet();
         CodingSheetController codingSheetController = generateNewInitializedController(CodingSheetController.class);
@@ -290,6 +339,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         uploadedFileNames.add(EXCEL_FILE_NAME2);
         codingSheetController.setUploadedFilesFileName(uploadedFileNames);
         codingSheetController.setUploadedFiles(uploadedFiles);
+        codingSheetController.setServletRequest(getServletPostRequest());
         codingSheetController.save();
         Long codingId = codingSheet.getId();
         assertNotNull(codingId);
@@ -303,6 +353,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
                 found = true;
             }
         }
+        // need to add ontology nodes to the mix
         assertTrue(found);
     }
 
@@ -318,10 +369,11 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         dataset.setDescription("test description");
         List<File> uploadedFiles = new ArrayList<File>();
         List<String> uploadedFileNames = new ArrayList<String>();
-        uploadedFileNames.add(TEST_DATSET_FILE.getName());
-        uploadedFiles.add(TEST_DATSET_FILE);
+        uploadedFileNames.add(TEST_DATASET_FILE.getName());
+        uploadedFiles.add(TEST_DATASET_FILE);
         datasetController.setUploadedFiles(uploadedFiles);
         datasetController.setUploadedFilesFileName(uploadedFileNames);
+        datasetController.setServletRequest(getServletPostRequest());
         datasetController.save();
         Long datasetId = dataset.getId();
         assertNotNull(datasetId);
@@ -342,19 +394,104 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
                 }
             }
         }
-        datasetService.createTranslatedFile(dataset);
+        tranlatedIRFile = datasetService.createTranslatedFile(dataset);
+    }
+
+    @Test
+    @Rollback
+    /*
+     * NOTE THIS TEST CAN BE BRITTLE ... MAINLY DUE TO MEMORY CONSTRAINTS
+     * The following config currently works: -Xmx4096m -XX:PermSize=64m -XX:MaxPermSize=2048m
+     * long megs = Runtime.getRuntime().maxMemory() / 1024 / 1024;
+     * Assert.assertTrue("Expected more memory to run this test. Current heapspace:" + megs + "M", megs / 1024 >= 2);
+     */
+    public void testBigDatasetSpansSheets() throws InstantiationException, IllegalAccessException, TdarActionException {
+        try {
+            // setup coding sheet
+            CodingSheet codingSheet = createAndSaveNewInformationResource(CodingSheet.class);
+            Set<CodingRule> rules = codingSheet.getCodingRules();
+            rules.add(createRule("1", "one", codingSheet));
+            rules.add(createRule("2", "two", codingSheet));
+            rules.add(createRule("3", "three", codingSheet));
+            genericService.save(codingSheet);
+
+            File bigFile = new File(TestConstants.TEST_DATA_INTEGRATION_DIR + "bigsheet.xlsx");
+
+            DatasetController datasetController = generateNewInitializedController(DatasetController.class);
+            datasetController.prepare();
+            Dataset dataset = datasetController.getDataset();
+            dataset.setTitle("test dataset");
+            dataset.setDescription("test description");
+            List<File> uploadedFiles = new ArrayList<File>();
+            List<String> uploadedFileNames = new ArrayList<String>();
+            uploadedFileNames.add(bigFile.getName());
+            uploadedFiles.add(bigFile);
+            datasetController.setUploadedFiles(uploadedFiles);
+            datasetController.setUploadedFilesFileName(uploadedFileNames);
+            datasetController.setServletRequest(getServletPostRequest());
+            datasetController.save();
+            Long datasetId = dataset.getId();
+            assertNotNull(datasetId);
+            DataTableColumn num = dataset.getDataTableByGenericName("ds1").getColumnByDisplayName("num");
+            assertNotNull(num);
+            datasetController = generateNewInitializedController(DatasetController.class);
+            datasetController.setId(datasetId);
+            datasetController.prepare();
+            datasetController.editColumnMetadata();
+            num.setDefaultCodingSheet(codingSheet);
+            datasetController.saveColumnMetadata();
+            dataset = null;
+            dataset = genericService.find(Dataset.class, datasetId);
+
+            InformationResourceFile translatedFile = datasetService.createTranslatedFile(dataset);
+            ExcelUnit excelUnit = new ExcelUnit();
+            excelUnit.open(translatedFile.getTranslatedFile().getFile());
+            assertTrue("there should be more than 2 sheets", 2 < excelUnit.getWorkbook().getNumberOfSheets());
+        } catch (OutOfMemoryError oem) {
+            logger.debug("Well, guess I ran out of memory...", oem);
+        }
+    }
+
+    @Test
+    @Rollback
+    public void testExcelOutput() throws Exception {
+        testCodingSheetMapping();
+        assertNotNull("file proxy was null", tranlatedIRFile);
+        ExcelUnit excelUnit = new ExcelUnit();
+        File retrieveFile = TdarConfiguration.getInstance().getFilestore().retrieveFile(tranlatedIRFile.getTranslatedFile());
+        excelUnit.open(retrieveFile);
+
+        excelUnit.selectSheet("total_number_of_bones_per_perio");
+        excelUnit.assertCellEquals(0, 0, "Row Id");
+        excelUnit.assertCellEquals(0, 1, "Period");
+        excelUnit.assertCellEquals(0, 2, "SumOfNo");
+        Cell cell = excelUnit.getCell(0, 0);
+        excelUnit.assertCellIsSizeInPoints(cell, (short) 11);
+
+        // header should be bold
+        excelUnit.assertCellIsBold(cell);
+
+        excelUnit.assertRowNotEmpty(13);
+        excelUnit.assertCellNotBold(excelUnit.getCell(13, 0));
+        excelUnit.assertRowIsEmpty(15);
+    }
+
+    private CodingRule createRule(String code, String term, CodingSheet codingSheet) {
+        CodingRule codingRule = new CodingRule(codingSheet, code, term, term);
+        return codingRule;
     }
 
     @Test
     @Rollback
     public void testDatasetMappingPreservation() throws Exception {
         CodingSheet codingSheet = setupCodingSheet();
-        Dataset dataset = setupIntegrationDataset(TEST_DATSET_FILE, "Test Dataset");
+        Dataset dataset = setupIntegrationDataset(TEST_DATASET_FILE, "Test Dataset");
         DatasetController datasetController = generateNewInitializedController(DatasetController.class);
         Long datasetId = dataset.getId();
         DataTable table = dataset.getDataTables().iterator().next();
         datasetController.setId(datasetId);
         DataTableColumn period_ = table.getColumnByDisplayName("Period");
+        assertFalse(period_.getColumnEncodingType().isSupportsCodingSheet());
         datasetController.prepare();
         datasetController.editColumnMetadata();
         period_.setDefaultCodingSheet(codingSheet);
@@ -364,7 +501,11 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         DataTableColumn period = genericService.find(DataTableColumn.class, period_.getId());
         logger.info("{}", period.getDefaultCodingSheet());
         logger.info("{}", codingSheet.getId());
-        assertNull("period should not be set because column type is wrong", period.getDefaultCodingSheet());
+        assertNotNull(period.getDefaultCodingSheet());
+        assertTrue(period.getColumnEncodingType().isSupportsCodingSheet());
+        // FIXME: this assertion no longer holds, we set the column encoding type to CODED_VALUE automatically if we set a default coding sheet on the
+        // column.
+        assertNotNull("coding sheet should exist", period.getDefaultCodingSheet());
 
         datasetController = generateNewInitializedController(DatasetController.class);
         table = dataset.getDataTables().iterator().next();
@@ -381,7 +522,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         assertEquals(period.getDefaultCodingSheet().getId(), codingSheet.getId());
         datasetService.createTranslatedFile(dataset);
 
-        Dataset newDataset = setupIntegrationDataset(TEST_DATSET_FILE, "Test Dataset", datasetId);
+        Dataset newDataset = setupIntegrationDataset(TEST_DATASET_FILE, "Test Dataset", datasetId);
 
         for (DataTable incomingDataTable : newDataset.getDataTables()) {
             for (DataTableColumn incomingColumn : incomingDataTable.getDataTableColumns()) {
@@ -415,6 +556,7 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         uploadedFiles.add(file);
         datasetController.setUploadedFiles(uploadedFiles);
         datasetController.setUploadedFilesFileName(uploadedFileNames);
+        datasetController.setServletRequest(getServletPostRequest());
         datasetController.save();
         assertNotNull(dataset.getId());
         assertEquals("controller shouldn't have action errors", 0, datasetController.getActionErrors().size());
@@ -423,9 +565,13 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
 
     /**
      * @return
-     * @throws TdarActionException 
+     * @throws TdarActionException
      */
     private CodingSheet setupCodingSheet() throws TdarActionException {
+        return setupCodingSheet(EXCEL_FILE_NAME, EXCEL_FILE_PATH, null);
+    }
+
+    private CodingSheet setupCodingSheet(String fileName, String filePath, Ontology ontology) throws TdarActionException {
         CodingSheetController codingSheetController = generateNewInitializedController(CodingSheetController.class);
         codingSheetController.prepare();
         CodingSheet codingSheet = codingSheetController.getCodingSheet();
@@ -433,10 +579,12 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
         codingSheet.setDescription("test description");
         List<File> uploadedFiles = new ArrayList<File>();
         List<String> uploadedFileNames = new ArrayList<String>();
-        uploadedFiles.add(new File(EXCEL_FILE_PATH));
-        uploadedFileNames.add(EXCEL_FILE_NAME);
+        uploadedFiles.add(new File(filePath));
+        codingSheet.setDefaultOntology(ontology);
+        uploadedFileNames.add(fileName);
         codingSheetController.setUploadedFilesFileName(uploadedFileNames);
         codingSheetController.setUploadedFiles(uploadedFiles);
+        codingSheetController.setServletRequest(getServletPostRequest());
         codingSheetController.save();
         Long codingId = codingSheet.getId();
         assertNotNull(codingId);
@@ -453,12 +601,6 @@ public class CodingSheetMappingITCase extends AbstractDataIntegrationTestCase {
     protected TdarActionSupport getController() {
         // TODO Auto-generated method stub
         return null;
-    }
-
-    @Override
-    public String[] getDatabaseList() {
-        // TODO Auto-generated method stub
-        return new String[0];
     }
 
     @Override
